# play-with-friends-stream

./: AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml  vitest.config.ts
.github/: CICD.md
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  openapi.yaml  pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/routers/: auth.py  leaderboard.py  players.py
backend/tests/: conftest.py  test_api.py
backend/tests_integration/: conftest.py  test_flow.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/game/: GameBoard.tsx  SnakeGame.tsx
frontend/src/components/watch/: PlayerList.tsx  WatchPlayer.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useSnakeGame.test.ts  useSnakeGame.ts
frontend/src/pages/: Index.tsx  Leaderboard.tsx  Watch.tsx
frontend/src/services/: api.test.ts  api.ts
src/: App.tsx
src/components/auth/: AuthModal.tsx
src/components/game/: GameControls.tsx
src/components/layout/: Header.tsx
src/components/leaderboard/: LeaderboardTable.tsx
src/components/ui/: button.tsx
src/hooks/: useSnakeGame.test.ts
src/services/: api.test.ts
src/types/: game.ts
